Роли теперь передаются в контролер по имени
